# swift-specs

./: .coveragerc  .gitreview  CONTRIBUTING.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  template.rst  tox.ini
doc/source/: conf.py  index.rst  template_link.rst
specs/done/: README.rst  erasure_coding.rst
specs/in_progress/: at_rest_encryption.rst  changing_policies.rst  container_sharding.rst  containeralias.rst  erasure_coding.rst  expiring_objects_rework.rst  fastpostupdates.rst  formpost_subprefix_signature.rst  global_ec_cluster.rst  increasing_partition_power.rst  notifications.rst  prefix_based_tempurl.rst  request_tagging_logging.rst  service_token.rst  single_process.rst  symlinks.rst  tiering.rst
specs/swift/: erasure_coding.rst  updateable-obj-sysmeta.rst
specs/swiftclient/: test.rst
