[metadata]
name = swift-specs
summary = OpenStack Swift Development Specifications
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True
skip_authors = True
skip_changelog = True

[upload_sphinx]
upload-dir = doc/build/html
